Successfully added logo and resized.  Need to fix the alignment.

--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -54,9 +54,7 @@ a:hover {
 }
 
 .logo {
-  width: 20%;
-  height: 5%;
-  padding-top: .2rem;
+  width: 40%;
 }
 
 .nav-elements ul {
